# fastapi-agentic-starter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: 03-Database-Design.md  04-Tech-Stack.md  05-Project-Structure.md  06-API-Documentation.md  07-Setup-Installation.md  08-Contribution-Guide.md  UPDATE-SUMMARY.md
docs/changelogs/: version-0.1.0.md  version-0.2.0.md
rules/: project_rules.md
src/agents/agent_manager/: agent.py
src/agents/prompts/: sample_agent_prompt.py
src/api/: main.py
src/api/endpoints/v1/: dependencies.py  health.py  metrics.py  routers.py  sample_agent.py  sample_di.py
src/api/endpoints/v1/schemas/: base.py  sample.py
src/api/middlewares/: error_handler.py  logging.py  observability.py  security.py
src/api/router/: routers.py
src/config/: logs_config.py  settings.py
src/core/: exceptions.py
src/database/: connection.py
src/database/repositories/: base.py  sqlalchemy_repository.py
src/execution/actions/: sample_action.py
src/execution/usecases/: sample_usecase.py
src/observability/: __init__.py  metrics.py  tracing.py
src/providers/ai/: langchain_model_loader.py
src/tests/: conftest.py
src/tests/v1/: test_agent.py  test_health.py
